--- a/blucles-jscript/index.html
+++ b/blucles-jscript/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bucles</title>
-    <script src="https://kit.fontawesome.com/f9265fe1bd.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/f9265fe1bd.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
     <script src="js/ejercicios.js"></script> 
