--- a/dom/index.html
+++ b/dom/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://kit.fontawesome.com/f9265fe1bd.js" crossorigin="anonymous"></script>
+    <title>Training JavaScript DOM</title>
 </head>
 <body>
     <script src="js/app.js"></script> 
