--- a/blucles-jscript/index.html
+++ b/blucles-jscript/index.html
@@ -8,7 +8,9 @@
     <!-- <script src="https://kit.fontawesome.com/f9265fe1bd.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
-    <script src="js/ejercicios.js"></script> 
+    <script src="js/ejercicios1.js"></script> 
     <script src="js/examples.js"></script> 
+    <script src="js/algorithms3.js"></script> 
+    <script src="js/ejercicios2.js"></script> 
 </body>
 </html>
