--- a/dom/index.html
+++ b/dom/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+ 
   <section>
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
+    <div data-box-number="1">1</div>
+    <div data-box-number="2">2</div>
+    <div data-box-number="3">3</div>
   </section>
     <script src="js/app.js"></script> 
 </body>
