TODO explicacion DOM

--- a/dom/index.html
+++ b/dom/index.html
@@ -14,6 +14,7 @@
     <div data-box-number="2">2</div>
     <div data-box-number="3">3</div>
   </section>
+  <p>Lorem ipsum dolor sit amet</p>
     <script src="js/app.js"></script> 
 </body>
 </html>
