--- a/task-list/index.html
+++ b/task-list/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://kit.fontawesome.com/f9265fe1bd.js" crossorigin="anonymous"></script>
+    <title>task-list</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<p>hola html</p>
     <script src="js/app.js"></script> 
 </body>
 </html>
