--- a/task-list/index.html
+++ b/task-list/index.html
@@ -5,10 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>task-list</title>
+    <script src="https://kit.fontawesome.com/f9265fe1bd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<div class="main">
+    <h1>Task-list</h1>
+    <div class="alert dismissible">
+        Inset you message please
+        <i class="fa-solid fa-square-xmark"></i>
+        <form name="new-task">
+            <label for="task">
+                <input type="text" name="task" placeholder="Add a new task" id="task">
+                <div class="arrow">
+                    <i class="fa-solid fa-arrow-right-long fa-2x"></i>
+                </div>
+            </label>
+        </form>
+        <div class="container">
+            <table>
+                <thead>
+                    <tr id="0">
+                        <th>Don't Forget To Do This!</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><i class="fa-solid fa-circle-check"> </i> <span contenteditable="true" class="task">Learn HTML!</span></td>
+                        <td><i class=></i>
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                              </span>
+                        </td>
+                        <td><i class=></i>
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa fa-trash fa-stack-1x fa-inverse"></i>
+                              </span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
     <script src="js/app.js"></script> 
 </body>
 </html>
